--- a/Mirko/Mirko.WindowsPhone/Pages/HashtagFlipPage.xaml
+++ b/Mirko/Mirko.WindowsPhone/Pages/HashtagFlipPage.xaml
@@ -9,6 +9,8 @@
     xmlns:controls="using:Mirko.Controls"
     xmlns:i="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:q="using:QKit"
+    xmlns:qc="using:QKit.Common"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400"
@@ -39,35 +41,70 @@
 
             <FlipView.ItemTemplate>
                 <DataTemplate>
-                    <controls:ListViewEx HorizontalAlignment="Stretch"
-                                         ItemsSource="{Binding Comments}"
-                                         ItemContainerStyle="{StaticResource ListViewItemStretchNoTilt}"
-                                         IsItemClickEnabled="False"
-                                         VirtualizingStackPanel.VirtualizationMode="Recycling"
-                                         IncrementalLoadingThreshold="6"
-                                         DataFetchSize="7"
-                                         Loaded="ListViewEx_Loaded">
+                    <q:MultiSelectListView ItemsSource="{Binding Comments}"
+                                           IsItemClickEnabled="False"
+                                           VirtualizingStackPanel.VirtualizationMode="Recycling"
+                                           IncrementalLoadingThreshold="6"
+                                           DataFetchSize="7"
+                                           Loaded="ListView_Loaded"
+                                           SelectionModeChanged="ListView_SelectionModeChanged">
 
-                        <ListView.Header>
-                            <StackPanel>
-                                <Rectangle Fill="Transparent" />
-                                <controls:Entry DataContext="{Binding}"
+                        <q:MultiSelectListView.Header>
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition Width="*" />
+                                </Grid.ColumnDefinitions>
+
+                                <Rectangle Grid.Row="0"
+                                           Grid.Column="0"
+                                           Grid.ColumnSpan="3"
+                                           Fill="Transparent" />
+
+                                <qc:EdgeSelectButton Grid.Column="0"
+                                                     Grid.Row="1"
+                                                     x:Name="HeaderEdgeButton"
+                                                     Click="EdgeSelectButton_Click" />
+
+                                <CheckBox Grid.Column="1"
+                                          Grid.Row="1"
+                                          x:Name="HeaderCheckBox"
+                                          MinWidth="20"
+                                          Visibility="Collapsed"
+                                          Unchecked="CheckBox_Unchecked" 
+                                          Style="{StaticResource CheckBoxNoTilt}" />
+
+                                <controls:Entry Grid.Column="2"
+                                                Grid.Row="1"
+                                                DataContext="{Binding}"
                                                 LargeEmbed="True"
                                                 IsTapEnabled="False"/>
-                            </StackPanel>
-                        </ListView.Header>
+                            </Grid>
+                        </q:MultiSelectListView.Header>
 
-                        <ListView.ItemTemplate>
+                        <q:MultiSelectListView.ItemTemplate>
                             <DataTemplate>
                                 <controls:Entry DataContext="{Binding}"
                                                 IsTapEnabled="False"
                                                 Margin="25,0,0,0"/>
                             </DataTemplate>
-                        </ListView.ItemTemplate>
+                        </q:MultiSelectListView.ItemTemplate>
 
-                    </controls:ListViewEx>
+                        <q:MultiSelectListView.Footer>
+                            <Rectangle Height="10"
+                                       Fill="Transparent" />
+                        </q:MultiSelectListView.Footer>
+
+                    </q:MultiSelectListView>
                 </DataTemplate>
-            </FlipView.ItemTemplate>
+            </FlipView.ItemTemplate>          
+            
         </FlipView>
 
     </Grid>
