--- a/Mirko/Mirko.Shared/Controls/HashtagSuggestionBox.xaml
+++ b/Mirko/Mirko.Shared/Controls/HashtagSuggestionBox.xaml
@@ -29,11 +29,13 @@
                  TextChanged="HashtagBox_TextChanged"
                  KeyDown="HashtagBox_KeyDown" />
 
-        <ListView MinHeight="140"
+        <ListView MinHeight="145"
+                  MaxHeight="180"
                   Grid.Row="1"
                   IsItemClickEnabled="True"
                   ItemClick="SuggestionsListView_ItemClick"
-                  ItemsSource="{Binding Suggestions}">
+                  ItemsSource="{Binding Suggestions}"
+                  VirtualizingStackPanel.VirtualizationMode="Recycling" >
 
             <ListView.ItemTemplate>
                 <DataTemplate>
